# ws23-feedback-pouring

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
docs/: torques_data_no_object.csv  torques_data_with_50%_bottle.csv  weightestimation.ipynb  wrench_estimation_initial.csv  wrench_estimation_initial.ods
feedback_pouring/: CMakeLists.txt  Makefile  cmake_install.cmake
feedback_pouring/src/: arm_initialisation.cpp  constants.h  example_jointcontroll.cpp  feedback_pouring.cpp  kdl_with_pouring.cpp  test_kdl.cpp  urdf_parse.cpp
feedback_pouring/urdf/: GEN3-7DOF-VISION_ARM_URDF_V12.urdf
src/: .gitignore  CMakeLists.txt  arm_initialisation.cpp
src/feedback_pouring/: config.cfg
src/feedback_pouring/src/: feedback_pouring.cpp
